Adding more classes
Continuing to work my way slowly through the RenderManager class and adding supporting classes and functions where needed. It so tempting to refactor things as I go, but I need to get this ported 100%, then I'll worry about how to make it better.

--- a/Clouds_Sharp/CloudsSharp/CloudsSharp.csproj
+++ b/Clouds_Sharp/CloudsSharp/CloudsSharp.csproj
@@ -38,6 +38,8 @@
     <Compile Include="GameManager.cs" />
     <Compile Include="RenderManager.cs" />
     <Compile Include="TextureManager.cs" />
+    <Compile Include="Font.cs" />
+    <Compile Include="GObject.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SDL2-CS.csproj">
