--- a/Clouds_Sharp/CloudsSharp/CloudsSharp.csproj
+++ b/Clouds_Sharp/CloudsSharp/CloudsSharp.csproj
@@ -32,7 +32,12 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Explosion.cs" />
     <Compile Include="GameMap.cs" />
+    <Compile Include="Globals.cs" />
+    <Compile Include="LogicManager.cs" />
+    <Compile Include="Player.cs" />
+    <Compile Include="PowerupManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="GameManager.cs" />
